# wsmancli

./: .gitignore  ChangeLog  Makefile.am  README.WIN  README.md  bootstrap  configure.in  wseventmgr.vcproj  wsmancli.sln  wsmancli.spec.in  wsmancli.vcproj
doc/: wsman.xml
examples/: Makefile.am  README  create_resource.c  enum_epr.c  new_api_example.c  new_api_transfer_create.c  new_api_transfer_get_put.c  serialize.c  session_example.c  session_invoke.c  win32_service.c  wsmid_identify.c  wsmid_identify_no_options.c
examples/cpp/: EnumInstance.cpp  Enum_ComputerSystem.cpp  GetInstance.cpp  Identify.cpp  Makefile.am
man/: Makefile.am  wseventmgr.1  wsman.1
src/: Makefile.am  wseventmgr.c  wsman-client-options.c  wsman-client-options.h  wsman-service.c  wsman.c  wsmid_identify.c
tests/: Makefile.am  common.h
tests/cunit/: Makefile.am  common.c  common.h  enumeration.c  identify.c  invoke.c  pull.c  run_tests.c  transfer_get.c  transfer_put.c
tests/interop/: Makefile.am  Scenarios.InteropWorkshop.Dec2006.MSFT.xml  Scenarios.InteropWorkshop.Dec2006.OpenWSMAN.xml  Scenarios.InteropWorkshop.Dec2006.WISEMAN.xml  Scenarios.InteropWorkshop.Dec2006.xml  WISEMAN-results.txt  interop.c  openwsman.xml
winwsman/: winwsman.sln  winwsman.vcproj
