dnl Process this file with autoconf to produce a configure script.

AC_INIT(wsmancli, 1.0.0)
AC_CONFIG_SRCDIR(wsmancli.spec.in)
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AC_PROG_CXX
AM_PROG_CC_STDC
AC_HEADER_STDC

WSMAN_PKG=$PACKAGE_NAME
AC_SUBST(WSMAN_PKG)

PKG_CHECK_MODULES(OPENWSMAN, [openwsman >= 0.5.0])
have_cunit=no
AC_CHECK_HEADERS([CUnit/Basic.h], have_cunit="yes" )
AM_CONDITIONAL(BUILD_CUNIT_TESTS, test "$have_cunit" == "yes")

AC_OUTPUT([
	wsmancli.spec
	Makefile
	src/Makefile
	examples/Makefile
	examples/cpp/Makefile
        tests/Makefile
        tests/interop/Makefile
        tests/cunit/Makefile
])

